# PolynomIntegralLib

./: CMakeLists.txt  README.md
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: polyIntLibrary.h
src/: polyIntLibrary.cpp
